--- a/python-flask/templates/hello.html
+++ b/python-flask/templates/hello.html
@@ -1,7 +1,8 @@
 <body>
-	<h1>Hello {{request.args.get("name")}}!</h1>
-	<form>
-		<input type=text name=name>
+	<h1>{{pata}}!</h1>
+	<form method="post">
+		<input type=text name="a">
+		<input type=text name="b">
 		<input type=submit>
 	</form>
 </body>
